# 3D_Viewer_CPP-Qt

./: README.md  README_RUS.md
src/: CMakeLists.txt
src/Controller/Object_Controller/: object_controller.cc  object_controller.h
src/Controller/Style_Controller/: style_controlloer.cc  style_controlloer.h
src/Model/Object_Handler/: common.h  object_facade.cc  object_facade.h
src/Model/Object_Handler/Modifier/: affine_transformation.cc  affine_transformation.h
src/Model/Object_Handler/Recorder/: strategy_recorder.h
src/Model/Object_Handler/Recorder/V_F_Recorder/: v_f_parser.cc  v_f_parser.h
src/Model/Style_Handler/: style_handler.cc  style_handler.h
src/View/Interaction_Panel/Modification_Panel/: modification_panel.cc  modification_panel.h
src/View/Interaction_Panel/Style_Panel/: style_panel.cc  style_panel.h  style_panel.ui
src/View/Object_Observer/: object_observer.cc  object_observer.h
src/View/Viewer/: Viewer.pro  Viewer.pro.user.b5d46c4  viewer.cc  viewer.h  viewer.ui
